kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: socialbee-website
  namespace: socialbee
spec:
  selector:
    app: socialbee
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-www-redirect
  namespace: socialbee
spec:
  selector:
    app: nginx-www-redirect
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
