kube/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  namespace: socialbee
  name: socialbee-website
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"

spec:
  rules:
  - host: socialbees.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-www-redirect
          servicePort: 80

  - host: www.socialbees.io
    http:
      paths:
      - path: /
        backend:
          serviceName: socialbee-website
          servicePort: 80
  tls:
    - secretName: tls-website-www-socialbee
      hosts:
        - socialbees.io

    - secretName: tls-website-socialbee
      hosts:
        - www.socialbees.io
